<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:gravity="center|top"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设备识别码"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/editDevID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:singleLine="true" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="请输入授权码"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/editAuthCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="true"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textRegSN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="请输入注册码"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/editReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="确定" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/user"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@drawable/content" />

                    <EditText
                        android:id="@+id/editUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_with_corner_5dp_blue"
                        android:ems="10"
                        android:singleLine="true"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="admin"
                        android:gravity="center"
                        android:textColor="@drawable/content" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/passwd"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@drawable/content" />

                    <EditText
                        android:id="@+id/editPasswd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_with_corner_5dp_blue"
                        android:ems="10"
                        android:padding="2dp"
                        android:gravity="center"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="12345"
                        android:textColor="@drawable/content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutAdvance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/setting_server"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@drawable/content" />

                    <EditText
                        android:id="@+id/editServer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:singleLine="true"
                        android:textColor="@drawable/content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:orientation="horizontal"
                android:showDividers="beginning" >

                <CheckBox
                    android:id="@+id/checkBoxSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/savelogininfo"
                    android:textColor="@drawable/content" />

                <Button
                    android:id="@+id/buttonMode"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/advance" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/login"
                    android:textColor="@drawable/content" />

                <ProgressBar
                    android:id="@+id/progressLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>